# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added

- add logger
- Transform: add schema in postgres connector (raw, marts)


### Changed


## [0.1]

### Added

- postgres up with docker-compose
- Class to ingest Meteo data to Postgres
- Class to extract Meteo data from API using iterator.
- requirements.txt for python dependencies.
- Add integration tests
- Upsert to Postgres using iterator
- Add Dockerfile to build docker to run EL process
- Use python typings and dependencies injector
- Add Station EL process
- Add ActionStation to launch subprocess to EL meteo

### Changed